feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -313,7 +313,7 @@
           "name": "symbol",
           "symbol": "SpaceTab",
           "tip": [
-            "Set the symbol in the completion tip.(😄🤔😎)\n",
+            "Set the symbol in the completion tip.(→?↓)\n",
             "For detail: https://pscompletions.pages.dev/command/#menu-symbol"
           ],
           "next": [
@@ -326,8 +326,8 @@
               ],
               "next": [
                 {
-                  "name": "😄",
-                  "tip": "Set to 😄 (Default)"
+                  "name": "→",
+                  "tip": "Set to → (Default)"
                 },
                 {
                   "name": "\"\"",
@@ -349,8 +349,8 @@
               ],
               "next": [
                 {
-                  "name": "😎",
-                  "tip": "Set to 😎 (Default)"
+                  "name": "↓",
+                  "tip": "Set to ↓ (Default)"
                 },
                 {
                   "name": "\"\"",
@@ -372,8 +372,8 @@
               ],
               "next": [
                 {
-                  "name": "🤔",
-                  "tip": "Set to 🤔 (Default)"
+                  "name": "?",
+                  "tip": "Set to ? (Default)"
                 },
                 {
                   "name": "\"\"",
@@ -1284,9 +1284,9 @@
               "name": "symbol",
               "tip": [
                 "Reset symbols to default values.\n",
-                "SpaceTab      => 😄\n",
-                "WriteSpaceTab => 😎\n",
-                "OptionTab     => 🤔"
+                "SpaceTab      => →\n",
+                "WriteSpaceTab => ↓\n",
+                "OptionTab     => ?"
               ]
             },
             {
@@ -1764,9 +1764,9 @@
       ],
       "symbol": {
         "example": [
-          "E: psc menu symbol SpaceTab 😄\n",
-          "   psc menu symbol OptionTab 🤔\n",
-          "   psc menu symbol WriteSpaceTab 😎"
+          "E: psc menu symbol SpaceTab →\n",
+          "   psc menu symbol OptionTab ?\n",
+          "   psc menu symbol WriteSpaceTab ↓"
         ],
         "err": {
           "max": [
@@ -1821,7 +1821,7 @@
     "reset": {
       "example": [
         "E: psc reset *                --- Reset PSCompletions module\n",
-        "   psc reset menu symbol      --- Reset all symbols(😄🤔😎)\n",
+        "   psc reset menu symbol      --- Reset all symbols(→?↓)\n",
         "   psc reset alias psc        --- Reset psc alias\n",
         "   psc reset completion psc   --- Reset(Remove) this special configuration(language) of psc\n"
       ],
