--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -311,7 +311,7 @@
           "name": "symbol",
           "symbol": "SpaceTab",
           "tip": [
-            "设置补全提示中的表情符号(😄🤔😎)\n",
+            "设置补全提示中的表情符号(→?↓)\n",
             "详情: https://pscompletions.pages.dev/command/#menu-symbol"
           ],
           "next": [
@@ -324,8 +324,8 @@
               ],
               "next": [
                 {
-                  "name": "😄",
-                  "tip": "设置为 😄 (默认值)"
+                  "name": "→",
+                  "tip": "设置为 → (默认值)"
                 },
                 {
                   "name": "\"\"",
@@ -346,8 +346,8 @@
               ],
               "next": [
                 {
-                  "name": "😎",
-                  "tip": "设置为 😎 (默认值)"
+                  "name": "↓",
+                  "tip": "设置为 ↓ (默认值)"
                 },
                 {
                   "name": "\"\"",
@@ -368,8 +368,8 @@
               ],
               "next": [
                 {
-                  "name": "🤔",
-                  "tip": "设置为 🤔 (默认值)"
+                  "name": "?",
+                  "tip": "设置为 ? (默认值)"
                 },
                 {
                   "name": "\"\"",
@@ -1284,9 +1284,9 @@
               "name": "symbol",
               "tip": [
                 "重置符号为默认值\n",
-                "SpaceTab      => 😄\n",
-                "WriteSpaceTab => 😎\n",
-                "OptionTab     => 🤔"
+                "SpaceTab      => →\n",
+                "WriteSpaceTab => ↓\n",
+                "OptionTab     => ?"
               ]
             },
             {
@@ -1763,9 +1763,9 @@
       ],
       "symbol": {
         "example": [
-          "E: psc menu symbol SpaceTab 😄\n",
-          "   psc menu symbol OptionTab 🤔\n",
-          "   psc menu symbol WriteSpaceTab 😎"
+          "E: psc menu symbol SpaceTab →\n",
+          "   psc menu symbol OptionTab ?\n",
+          "   psc menu symbol WriteSpaceTab ↓"
         ],
         "err": {
           "max": [
@@ -1820,7 +1820,7 @@
     "reset": {
       "example": [
         "E: psc reset *                --- 重置所有配置\n",
-        "   psc reset menu symbol      --- 重置所有符号配置(😄🤔😎)\n",
+        "   psc reset menu symbol      --- 重置所有符号配置(→?↓)\n",
         "   psc reset alias psc        --- 将 psc 恢复为默认补全名\n",
         "   psc reset completion psc   --- 重置(移除) psc 的特殊配置\n"
       ],
