fix(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -313,7 +313,8 @@
           "name": "symbol",
           "symbol": "SpaceTab",
           "tip": [
-            "Set the symbol in the completion tip.(→?↓)\n",
+            "Set some special symbols(→?↓) in the completion tip.\n",
+            "They only exist in completions added via `psc add`.\n",
             "For detail: https://pscompletions.pages.dev/command/#menu-symbol"
           ],
           "next": [
@@ -321,8 +322,7 @@
               "name": "SpaceTab",
               "symbol": "SpaceTab",
               "tip": [
-                "Current Value: {{ $PSCompletions.config.SpaceTab }}\n",
-                "Setting it will affect all completion item with this type of symbol."
+                "Current Value: {{ $PSCompletions.config.SpaceTab }}"
               ],
               "next": [
                 {
@@ -344,8 +344,7 @@
               "name": "WriteSpaceTab",
               "symbol": "SpaceTab",
               "tip": [
-                "Current Value: {{ $PSCompletions.config.WriteSpaceTab }}\n",
-                "Setting it will affect all completion item with this type of symbol."
+                "Current Value: {{ $PSCompletions.config.WriteSpaceTab }}"
               ],
               "next": [
                 {
@@ -367,8 +366,7 @@
               "name": "OptionTab",
               "symbol": "SpaceTab",
               "tip": [
-                "Current Value: {{ $PSCompletions.config.OptionTab }}\n",
-                "Setting it will affect all completion item with this type of symbol."
+                "Current Value: {{ $PSCompletions.config.OptionTab }}"
               ],
               "next": [
                 {
