--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -311,7 +311,8 @@
           "name": "symbol",
           "symbol": "SpaceTab",
           "tip": [
-            "设置补全提示中的表情符号(→?↓)\n",
+            "设置补全提示中的特殊符号(→?↓)\n",
+            "这些符号只在通过 psc add 添加的补全中存在\n",
             "详情: https://pscompletions.pages.dev/command/#menu-symbol"
           ],
           "next": [
@@ -319,8 +320,7 @@
               "name": "SpaceTab",
               "symbol": "SpaceTab",
               "tip": [
-                "当前值: {{ $PSCompletions.config.SpaceTab }}\n",
-                "设置它, 会影响所有的补全提示中的此类型表情符号"
+                "当前值: {{ $PSCompletions.config.SpaceTab }}"
               ],
               "next": [
                 {
@@ -341,8 +341,7 @@
               "name": "WriteSpaceTab",
               "symbol": "SpaceTab",
               "tip": [
-                "当前值: {{ $PSCompletions.config.WriteSpaceTab }}\n",
-                "设置它, 会影响所有的补全提示中的此类型表情符号"
+                "当前值: {{ $PSCompletions.config.WriteSpaceTab }}"
               ],
               "next": [
                 {
@@ -363,8 +362,7 @@
               "name": "OptionTab",
               "symbol": "SpaceTab",
               "tip": [
-                "当前值: {{ $PSCompletions.config.OptionTab }}\n",
-                "设置它, 会影响所有的补全提示中的此类型表情符号"
+                "当前值: {{ $PSCompletions.config.OptionTab }}"
               ],
               "next": [
                 {
