Squashed commit of the following:
commit 43f1bf938b0c0a78aee8a079ddf20116699ec07d
Author: abgox <abgohxf@outlook.com>
Date:   Wed Nov 27 15:53:59 2024 +0800

    feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1392,7 +1392,7 @@
         "}}\n",
         "<@Cyan>Press <@Magenta>Enter<@Cyan> key to update or <@Magenta>other key(Without Ctrl)<@Cyan> to cancel!"
       ],
-      "updating": "<@Cyan>Successfully run the command: <@Magenta>Update-Module PSCompletions\n<@Cyan>Updating PSCompletions module..."
+      "updating": "<@Cyan>Try to run the command: <@Magenta>{{ $update_cmd }}<@Cyan>\nTrying to update PSCompletions module..."
     },
     "update_info": [
       "<@Cyan>PSCompletions remote repository update:\n",
