--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1391,7 +1391,7 @@
         "}}\n",
         "<@Cyan>按下 <@Magenta>Enter(回车键)<@Cyan> 进行更新，<@Magenta>其他任意键(不包含 Ctrl 键)<@Cyan> 取消更新!"
       ],
-      "updating": "<@Cyan>成功运行命令: <@Magenta>Update-Module PSCompletions \n<@Cyan>PSCompletions 模块正在更新..."
+      "updating": "<@Cyan>尝试运行命令: <@Magenta>{{ $update_cmd }}<@Cyan>\nPSCompletions 模块正在尝试更新..."
     },
     "update_info": [
       "<@Cyan>PSCompletions 远程仓库更新: \n",
