--- a/completions/npm/language/en-US.json
+++ b/completions/npm/language/en-US.json
@@ -303,22 +303,14 @@
   },
   "config": [
     {
-      "name": "disable_hooks",
-      "value": 0,
+      "name": "enable_hooks",
+      "value": 1,
       "values": [
         1,
         0
       ],
       "tip": [
-        "{{",
-        "$_value = $PSCompletions.config.comp_config.npm.disable_hooks;",
-        "if($_value -ne $null){ \"Current Value: <@Magenta>$_value<@Blue>`n\" }",
-        "}}",
-        "Set whether to disable hooks. Default to 0.\n",
-        "The hooks will parse some data and add them in command completions dynamically.\n",
-        "Included data: scripts/dependencies/devDependencies fields in package.json\n",
-        "Included command: <@Magenta>run<@Blue>,<@Magenta>uninstall<@Blue>,<@Magenta>update<@Blue>,...\n",
-        "You can disable it by running <@Magenta>psc completion npm disable_hooks 1<@Blue>."
+        "{{ $PSCompletions.info.completion.enable_hooks.tip }}"
       ]
     }
   ]
