--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -65,6 +65,15 @@
             "if($PSCompletions.update){ \"List: $($PSCompletions.update -join ',')\" }",
             "else{'All completions are the latest!'}",
             "}}"
+          ],
+          "options": [
+            {
+              "name": "--force",
+              "tip": [
+                "Force update of all added completions.\n",
+                "(It ensures that completions be latest.)"
+              ]
+            }
           ]
         }
       ]
@@ -280,7 +289,7 @@
           "symbol": "SpaceTab",
           "tip": [
             "Current Value: {{ $PSCompletions.config.function_name }}\n",
-            "Set the name of the core function exported by PSCompletions. (The change takes effect after restarting PowerShell and importing PSCompletions module.)\n",
+            "Set the name of the core function exported by PSCompletions.\n",
             "When you need to define a function called PSCompletions, you can use this configuration to change the default exported function name of the PSCompletions module to resolve conflicts."
           ],
           "next": [
@@ -313,7 +322,7 @@
           "name": "symbol",
           "symbol": "SpaceTab",
           "tip": [
-            "Set some special symbols(→?↓) in the completion tip.\n",
+            "Set some special symbols(»?!) in the completion tip.\n",
             "They only exist in completions added via `psc add`.\n",
             "For detail: https://pscompletions.pages.dev/command/#menu-symbol"
           ],
@@ -326,8 +335,8 @@
               ],
               "next": [
                 {
-                  "name": "→",
-                  "tip": "Set to → (Default)"
+                  "name": "»",
+                  "tip": "Set to » (Default)"
                 },
                 {
                   "name": "\"\"",
@@ -348,8 +357,8 @@
               ],
               "next": [
                 {
-                  "name": "↓",
-                  "tip": "Set to ↓ (Default)"
+                  "name": "!",
+                  "tip": "Set to ! (Default)"
                 },
                 {
                   "name": "\"\"",
@@ -420,6 +429,15 @@
                 "╭─────╮\n",
                 "│     │\n",
                 "╰─────╯"
+              ]
+            },
+            {
+              "name": "bold_line_rect_border",
+              "tip": [
+                "Set to a bold line rectangular border. Be like:\n",
+                "┏━━━━━┓\n",
+                "┃     ┃\n",
+                "┗━━━━━┛"
               ]
             }
           ]
@@ -865,7 +883,7 @@
               "symbol": "SpaceTab",
               "tip": [
                 "当前值: \"{{ $PSCompletions.config.trigger_key }}\" (Default: \"Tab\")\n",
-                "Setting the key that triggers the completion menu. (The change takes effect after restarting PowerShell and importing PSCompletions module.)"
+                "Setting the key that triggers the completion menu."
               ],
               "next": [
                 {
@@ -1152,7 +1170,7 @@
               "symbol": "SpaceTab",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.enable_menu_enhance }} (Default 1, it means enabled)\n",
-                "Set whether to override PowerShell's built-in completion menu. (The change takes effect after restarting PowerShell and importing PSCompletions module.)\n",
+                "Set whether to override PowerShell's built-in completion menu.\n",
                 "More info: https://github.com/abgox/PSCompletions/blob/main/README.md#about-menu-enhance\n",
                 "           https://gitee.com/abgox/PSCompletions/blob/main/README.md#about-menu-enhance\n"
               ],
@@ -1282,8 +1300,8 @@
               "name": "symbol",
               "tip": [
                 "Reset symbols to default values.\n",
-                "SpaceTab      => →\n",
-                "WriteSpaceTab => ↓\n",
+                "SpaceTab      => »\n",
+                "WriteSpaceTab => !\n",
                 "OptionTab     => ?"
               ]
             },
@@ -1392,8 +1410,10 @@
         "}}\n",
         "<@Cyan>Press <@Magenta>Enter<@Cyan> key to update or <@Magenta>other key(Without Ctrl)<@Cyan> to cancel!"
       ],
-      "updating": "<@Cyan>Try to run the command: <@Magenta>{{ $update_cmd }}<@Cyan>\nTrying to update PSCompletions module..."
+      "updating": "<@Cyan>Try to run the command: <@Magenta>{{ $update_cmd }}<@Cyan>\nTrying to update PSCompletions module...",
+      "restart": "<@Yellow>The change takes effect after restarting PowerShell and reimporting PSCompletions module."
     },
+    "current_value": "Current Value",
     "update_info": [
       "<@Cyan>PSCompletions remote repository update:\n",
       "{{",
@@ -1480,8 +1500,7 @@
         ],
         "no": [
           "<@Red>Completion <@Magenta>{{ $completion }}<@Red> does not exist in the completions list.\n",
-          "It's recommended to enter <@Magenta>psc add<@Red>, then press <@Magenta>Space<@Red> and <@Magenta>Tab<@Red> to complete.\n",
-          "Or you can use <@Magenta>psc search<@Red> to search for available completions."
+          "It's recommended to enter <@Magenta>psc add<@Red>, then press <@Magenta>Space<@Red> and <@Magenta>Tab<@Red> to complete."
         ]
       }
     },
@@ -1566,10 +1585,12 @@
       "done": [
         "{{",
         "if($arg[1] -eq 'add') {",
-        "\"<@Magenta>$($completion)<@Green> adds an alias <@Magenta>$($alias)<@Green>, Now <@Magenta>$($completion)<@Green>'s available aliases: <@Magenta>$($PSCompletions.data.alias.$completion -join ' ') $($alias)`n<@Yellow>The change takes effect after restarting PowerShell and importing PSCompletions module.\"",
+        "foreach($_ in $add_list){ \"<@Magenta>$($completion)<@Green> add an alias <@Magenta>$_<@Green>`n\" };",
+        "\"<@Green>Now <@Magenta>$($completion)<@Green>'s available alias: <@Magenta>$($PSCompletions.data.alias.$completion -join ' ') $($add_list -join ' ')\"",
         "}",
         "elseif($arg[1] -eq 'rm') {",
-        "\"<@Magenta>$($completion)<@Green> removes an alias <@Magenta>$($alias)<@Green>, Now <@Magenta>$($completion)<@Green>'s available aliases: <@Magenta>$(($PSCompletions.data.alias.$completion | Where-Object { $_ -ne $alias }) -join ' ')`n<@Yellow>The change takes effect after restarting PowerShell and importing PSCompletions module.\"",
+        "foreach($_ in $rm_list){ \"<@Magenta>$($completion)<@Green> remove an alias <@Magenta>$_<@Green>`n\" };",
+        "\"<@Green>Now <@Magenta>$($completion)<@Green>'s available alias: <@Magenta>$(($PSCompletions.data.alias.$completion | Where-Object { $_ -notin $rm_list }) -join ' ')\"",
         "}",
         "}}"
       ],
@@ -1702,7 +1723,7 @@
     },
     "completion": {
       "tip": [
-        "Set special configuration for {{ $completion }}\n",
+        "Set special configuration for {{ $completion }}.\n",
         "Special configurations have higher priority than global configurations."
       ],
       "tip_v": "Set to {{ $value }}",
@@ -1712,7 +1733,7 @@
         "   psc completion psc language zh-CN   --- Set the psc completion language to zh-CN"
       ],
       "done": [
-        "<@Green>{{ $completion }} 's special configuration modified successfully!\n",
+        "<@Magenta>{{ $completion }}<@Green>'s special configuration modified successfully!\n",
         "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $old_value }}<@Green> => <@Magenta>{{ $new_value }}"
       ],
       "err": {
@@ -1742,10 +1763,21 @@
           "$v = $PSCompletions.config.comp_config.$completion.enable_tip;",
           "if($v -notin @('',$null)){ \"Current Value: $($v)`n\" }",
           "}}",
-          "Set whether to display completion tip for {{ $completion }} when using the completion menu provided by PSCompletions module."
+          "Set whether to display completion tip for {{ $completion }}."
         ],
         "tip_v1": "Set {{ $completion }}'s enable_tip to 1.",
         "tip_v0": "Set {{ $completion }}'s enable_tip to 0."
+      },
+      "enable_hooks": {
+        "tip": [
+          "{{",
+          "$_value = $PSCompletions.config.comp_config.$completion.enable_hooks;",
+          "if($_value -ne $null){ \"Current Value: <@Magenta>$_value<@Blue>`n\" }",
+          "}}",
+          "Set whether to enable hooks. Default to <@Magenta>1<@Blue>.\n",
+          "The hooks will parse or generate some completion data and add them dynamically.\n",
+          "You can disable it by running <@Magenta>psc completion {{ $completion }} enable_hooks 0<@Blue>."
+        ]
       }
     },
     "menu": {
@@ -1757,14 +1789,13 @@
       ],
       "done": [
         "<@Green>Configuration modified successfully!\n",
-        "<@Yellow>If it does not take effect, restart PowerShell and import the module again.\n",
         "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $old_value }}<@Green> => <@Magenta>{{ $new_value }}"
       ],
       "symbol": {
         "example": [
-          "E: psc menu symbol SpaceTab →\n",
+          "E: psc menu symbol SpaceTab »\n",
           "   psc menu symbol OptionTab ?\n",
-          "   psc menu symbol WriteSpaceTab ↓"
+          "   psc menu symbol WriteSpaceTab !"
         ],
         "err": {
           "max": [
@@ -1819,7 +1850,7 @@
     "reset": {
       "example": [
         "E: psc reset *                --- Reset PSCompletions module\n",
-        "   psc reset menu symbol      --- Reset all symbols(→?↓)\n",
+        "   psc reset menu symbol      --- Reset all symbols(»?!)\n",
         "   psc reset alias psc        --- Reset psc alias\n",
         "   psc reset completion psc   --- Reset(Remove) this special configuration(language) of psc\n"
       ],
@@ -1835,11 +1866,11 @@
       "done": [
         "{{",
         "if($change_list){",
-        "  \"<@Green>Reset successfully!`n<@Yellow>If it does not take effect, restart PowerShell and import the module again.`n<@Cyan>Here are the changes from old to new:`n------------------------------`n\";",
-        "  ($change_list | ForEach-Object { \"<@Blue>$($_.item): <@Magenta>$($_.old_value)<@Blue> => <@Magenta>$($_.new_value)<@Blue>\" }) -join \"`n\";",
+        "  \"<@Green>Reset successfully!`n<@Cyan>Here are the changes from old to new:`n------------------------------`n\";",
+        "  ($change_list | ForEach-Object {",
+        "$str = if($_.cmd){ \"<@Magenta>$($_.cmd)<@Blue>($($_.item))\" }else{ \"<@Blue>$($_.item)\" }",
+        " \"$($str): <@Magenta>$($_.old_value)<@Blue> => <@Magenta>$($_.new_value)<@Blue>\" }) -join \"`n\";",
         "  \"<@Cyan>`n------------------------------\"",
-        "}else{",
-        "  \"<@Green>Reset successfully!`n<@Yellow>If it does not take effect, restart PowerShell and import the module again.\"",
         "}",
         "}}"
       ],
@@ -1871,22 +1902,14 @@
   },
   "config": [
     {
-      "name": "disable_hooks",
-      "value": 0,
+      "name": "enable_hooks",
+      "value": 1,
       "values": [
         1,
         0
       ],
       "tip": [
-        "{{",
-        "$_value = $PSCompletions.config.comp_config.psc.disable_hooks;",
-        "if($_value -ne $null){ \"Current Value: <@Magenta>$_value<@Blue>`n\" }",
-        "}}",
-        "Set whether to disable hooks. Default to 0.\n",
-        "The hooks will parse some data and add them in command completions dynamically.\n",
-        "Included data: the name of the installed or addable completions\n",
-        "Included command: <@Magenta>add<@Blue>,<@Magenta>rm<@Blue>,<@Magenta>update<@Blue>,<@Magenta>completion<@Blue>,<@Magenta>alias<@Blue>,...\n",
-        "You can disable it by running <@Magenta>psc completion psc disable_hooks 1<@Blue>."
+        "{{ $PSCompletions.info.completion.enable_hooks.tip }}"
       ]
     }
   ]
