--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -472,6 +472,17 @@
         "   config <name>           --- Get configuration\n",
         "   config <name> <value>   --- Set configuration\n",
         "   config rm <name>        --- Remove configuration"
+      ],
+      "next": [
+        {
+          "name": "proxy",
+          "tip": [
+            "{{",
+            "if($current_value){ \"Current Value: $current_value\" }",
+            "else{ \"It has no value.\" }",
+            "}}"
+          ]
+        }
       ]
     },
     {
@@ -780,22 +791,14 @@
   },
   "config": [
     {
-      "name": "disable_hooks",
-      "value": 0,
+      "name": "enable_hooks",
+      "value": 1,
       "values": [
         1,
         0
       ],
       "tip": [
-        "{{",
-        "$_value = $PSCompletions.config.comp_config.scoop.disable_hooks;",
-        "if($_value -ne $null){ \"Current Value: <@Magenta>$_value<@Blue>`n\" }",
-        "}}",
-        "Set whether to disable hooks. Default to 0.\n",
-        "The hooks will parse some data and add them in command completions dynamically.\n",
-        "Included data: the name of the installed apps, cache, etc.\n",
-        "Included command: <@Magenta>uninstall<@Blue>,<@Magenta>update<@Blue>,<@Magenta>bucket<@Blue>,<@Magenta>cache rm<@Blue>,<@Magenta>hold<@Blue>,...\n",
-        "You can disable it by running <@Magenta>psc completion scoop disable_hooks 1<@Blue>."
+        "{{ $PSCompletions.info.completion.enable_hooks.tip }}"
       ]
     }
   ]
