--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -472,6 +472,17 @@
         "   config <name>           --- 获取配置\n",
         "   config <name> <value>   --- 设置配置\n",
         "   config rm <name>        --- 移除配置"
+      ],
+      "next": [
+        {
+          "name": "proxy",
+          "tip": [
+            "{{",
+            "if($current_value){ \"当前值: $current_value\" }",
+            "else{ \"配置还未设置值\" }",
+            "}}"
+          ]
+        }
       ]
     },
     {
@@ -780,22 +791,14 @@
   },
   "config": [
     {
-      "name": "disable_hooks",
-      "value": 0,
+      "name": "enable_hooks",
+      "value": 1,
       "values": [
         1,
         0
       ],
       "tip": [
-        "{{",
-        "$_value = $PSCompletions.config.comp_config.scoop.disable_hooks;",
-        "if($_value -ne $null){ \"当前值: <@Magenta>$_value<@Blue>`n\" }",
-        "}}",
-        "设置是否禁用 hooks，默认为 0 表示启用\n",
-        "hooks 将解析一些数据, 然后动态添加到命令补全中\n",
-        "包含的数据: 已安装的 app 名称、bucket 名称、cache 等\n",
-        "包含的命令: <@Magenta>uninstall<@Blue>,<@Magenta>update<@Blue>,<@Magenta>bucket<@Blue>,<@Magenta>cache rm<@Blue>,<@Magenta>hold<@Blue>,...\n",
-        "你可以通过运行 <@Magenta>psc completion scoop disable_hooks 1<@Blue> 来禁用它"
+        "{{ $PSCompletions.info.completion.enable_hooks.tip }}"
       ]
     }
   ]
