--- a/completions/volta/language/zh-CN.json
+++ b/completions/volta/language/zh-CN.json
@@ -193,22 +193,14 @@
   },
   "config": [
     {
-      "name": "disable_hooks",
-      "value": "0",
+      "name": "enable_hooks",
+      "value": 1,
       "values": [
-        "1",
-        "0"
+        1,
+        0
       ],
       "tip": [
-        "{{",
-        "$_value = $PSCompletions.config.comp_config.volta.disable_hooks;",
-        "if($_value -ne $null){ \"当前值: <@Magenta>$_value<@Blue>`n\" }",
-        "}}",
-        "设置是否禁用 hooks，默认为 0 表示启用\n",
-        "hooks 将解析一些数据, 然后动态添加到命令补全中\n",
-        "包含的数据: 已安装的工具版本\n",
-        "包含的命令: <@Magenta>pin<@Blue>,...\n",
-        "你可以通过运行 <@Magenta>psc completion volta disable_hooks 1<@Blue> 来禁用它"
+        "{{ $PSCompletions.info.completion.enable_hooks.tip }}"
       ]
     }
   ]
