--- a/completions/wsl/language/en-US.json
+++ b/completions/wsl/language/en-US.json
@@ -443,22 +443,14 @@
   },
   "config": [
     {
-      "name": "disable_hooks",
-      "value": 0,
+      "name": "enable_hooks",
+      "value": 1,
       "values": [
         1,
         0
       ],
       "tip": [
-        "{{",
-        "$_value = $PSCompletions.config.comp_config.wsl.disable_hooks;",
-        "if($_value -ne $null){ \"Current Value: <@Magenta>$_value<@Blue>`n\" }",
-        "}}",
-        "Set whether to disable hooks. Default to 0.\n",
-        "The hooks will parse some data and add them in command completions dynamically.\n",
-        "Included data: the distro name\n",
-        "Included command: <@Magenta>-d<@Blue>/<@Magenta>--distribution<@Blue>,<@Magenta>-t<@Blue>/<@Magenta>--terminate<@Blue>,...\n",
-        "You can disable it by running <@Magenta>psc completion wsl disable_hooks 1<@Blue>."
+        "{{ $PSCompletions.info.completion.enable_hooks.tip }}"
       ]
     }
   ]
